# linkml-dataops

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
linkml_dataops/: __init__.py  apiroot.py
linkml_dataops/changer/: __init__.py  changer.py  changes.yaml  changes_model.py  jsonpatch_changer.py  obj_utils.py  object_changer.py
linkml_dataops/creators/: __init__.py  crud_model_creator.py  fastapi_creator.py  python_domain_api_creator.py
linkml_dataops/diffs/: differ.py  yaml_patch.py
linkml_dataops/generators/: __init__.py  apigenerator.py  fastapigenerator.py  pyapigenerator.py
linkml_dataops/query/: __init__.py  object_queryengine.py  query_model.py  queryengine.py
linkml_runtime_api/: apiroot.py
linkml_runtime_api/changer/: __init__.py  changer.py  changes.yaml  jsonpatch_changer.py  object_changer.py
linkml_runtime_api/diffs/: differ.py
linkml_runtime_api/generators/: apigenerator.py  fastapigenerator.py  pyapigenerator.py
linkml_runtime_api/query/: __init__.py  object_queryengine.py  query.yaml  queryengine.py
tests/: __init__.py  common_tests.py  test_apigenerator.py  test_apply_cli.py  test_changer_common.py  test_crud_model_creator.py  test_differ.py  test_jsonpatch_changer.py  test_object_changer.py  test_objectqueryengine.py  test_paths.py  test_pythonapigenerator.py  test_query.py  test_schema_manipulation.py  test_yaml_patch.py
tests/input/: kitchen_sink_inst_01.yaml
tests/model/: __init__.py  kitchen_sink.py  kitchen_sink.yaml  kitchen_sink_api.py  kitchen_sink_api.yaml  kitchen_sink_api_bespoke.py
tests/output/: kitchen_sink_api_generated_test.py  kitchen_sink_inst_01.json  kitchen_sink_inst_01.patched.yaml
