[tool.poetry]
name = "linkml-dataops"
version = "0.0.0"
description = "Data Operations API for the Linked Open Data Modeling Language"
authors = [
    "Chris Mungall <cjmungall@lbl.gov>",
    "Harold Solbrig <solbrig@jhu.edu>",
]

readme = "README.md"

homepage = "https://linkml.io/linkml/"
repository = "https://github.com/linkml/linkml-dataops"
documentation = "https://linkml.io/linkml/"
license = "CC0 1.0 Universal"

keywords = ["schema", "linked data", "data modeling", "rdf", "owl", "biolink"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.scripts]    
gen-api-datamodel = "linkml_dataops.generators.apigenerator:cli"
gen-crud-datamodel = "linkml_dataops.generators.crudmodelcreator:cli"
gen-python-api = "linkml_dataops.generators.pyapigenerator:cli"
linkml-apply = "linkml_dataops.changer.jsonpatch_changer:cli"

[tool.poetry.dependencies]
python = "^3.7.6"
linkml-runtime = ">= 1.3.0"
jsonpath-ng = "*"
"ruamel.yaml" = "*"
jsonpatch = "*"

[tool.poetry.dev-dependencies]
jinja2 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
