[metadata]
name = linkml_runtime_api
url = https://github.com/biolink/linkml-runtime-api
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = LinkML Runtime Environment API
description = Runtime Environment API for the Linked Open Data Modeling Language
home-page = http://linkml.github.io/linkml-runtime-api
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    linkml
    lod
    rdf
    owl
    yaml
    model
    metamodel

[files]
packages =
    linkml_runtime_api

[entry_points]
console_scripts =
    gen-api-datamodel = linkml_runtime_api.generators.apigenerator:cli
    gen-python-api = linkml_runtime_api.generators.pyapigenerator:cli
