[metadata]
name = linkml_dataops
url = https://github.com/biolink/linkml-runtime-api
author = Chris Mungall
author-email = cjmungall@lbl.gov
summary = LinkML Data Operations API
description = Data Operations API for the Linked Open Data Modeling Language
home-page = http://github.com/linkml/linkml-dataops
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    linkml
    lod
    rdf
    owl
    yaml
    model
    metamodel

[files]
packages =
    linkml_dataops

[entry_points]
console_scripts =
    gen-api-datamodel = linkml_dataops.generators.apigenerator:cli
    gen-crud-datamodel = linkml_dataops.generators.apigenerator:cli
    gen-python-api = linkml_dataops.generators.pyapigenerator:cli
    linkml-apply = linkml_dataops.changer.jsonpatch_changer:cli
